@@ -1,3 +1,12 @@
+2010-03-04  Leandro Pereira  <leandro@profusion.mobi>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        Add EFL port files to platform/text/efl.
+        http://webkit.org/b/35740
+
+        * platform/text/efl/TextBreakIteratorInternalICUEfl.cpp: Added.
+
 2010-03-04  Fridrich Strba  <fridrich.strba@bluewin.ch>
 
         Reviewed by Holger Freyther.
